--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/GalMunGral/two-factor-server#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
-    "googleapis": "^36.0.0"
+    "googleapis": "^36.0.0",
+    "node-fetch": "^2.3.0"
   }
 }
