--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "two-factor-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +22,11 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "googleapis": "^36.0.0",
+    "jsonwebtoken": "^8.4.0",
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0"
+    "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^8.3.0"
   }
 }
