--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "googleapis": "^36.0.0",
+    "hbs": "^4.0.1",
     "jsonwebtoken": "^8.4.0",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
